# HRPF

./: .gitignore  CMakeLists.txt  README.md  eval.sh  test.py
include/: hrpa.h
include/algorithm/: utils.h
include/algorithm/merge_sort/: cuMerge.h  mergeSortProblem.h
include/algorithm/parallel_for_zero/: parallel_for_dec.h  parallel_for_inc.h  parallel_for_zb.h
include/algorithm/quick_sort/: quickSortProblem.h
include/algorithm/strassen_problem/: cuAdd.h  strassenProblem.h
include/common/: cpu_device.h  data.h  device.h  enum.h  gpu_device.h  runtime.h
include/datastructure/: arraylist.h  matrix.h  reduce_value.h
include/framework/: config.h  framework.h  problem.h  task.h
include/tool/: helper.h  initializer.h
src/algorithm/: utils.cu
src/algorithm/merge_sort/: cuMerge.cu  mergeSortProblem.cpp
src/algorithm/parallel_for_zero/: parallel_for_dec.cpp  parallel_for_inc.cpp  parallel_for_zb.cpp
src/algorithm/quick_sort/: quickSortProblem.cpp
src/algorithm/strassen_problem/: cuAdd.cu  strassenProblem.cpp
src/common/: cpu_device.cpp  gpu_device.cpp  runtime.cpp
src/datastructure/: arraylist.cpp  matrix.cpp  reduce_value.cpp
src/framework/: framework.cpp  problem.cpp  task.cpp
src/tool/: helper.cpp
test/adjoint_conv/: ac_hrpf.cu  ac_omp.cpp  ac_omp.cu  ac_seq.cpp
test/dft/: dft_hrpf.cu  dft_omp.cpp  dft_omp.cu  dft_seq.cpp
test/hadamard/: hadamard_hrpf.cu  hadamard_omp.cpp  hadamard_seq.cpp
test/kmeans/: kmeans_hrpf.cu  kmeans_omp.cpp  kmeans_omp.cu  kmeans_seq.cpp
test/knn/: knn_hrpf.cu  knn_omp.cpp  knn_omp.cu  knn_seq.cpp
test/mat_vec_mul/: mvm_hrpf.cu  mvm_omp.cpp  mvm_seq.cpp
test/matmul/: matmul_mkl.cpp  matmul_omp.cpp
test/merge_sort/: ms_gpu.cu  ms_hrpf.cu  ms_omp.cpp  ms_seq.cpp  ms_starpu.cu  ms_std.cpp  ms_thrust.cu
test/nbody/: nbody_hrpf.cu  nbody_omp.cpp  nbody_seq.cpp
test/quick_sort/: qs_gpu.cu  qs_hrpf.cu  qs_omp.cpp  qs_seq.cpp  qs_starpu.cu  qs_std.cpp
test/strassen/: matmul_cublas.cu  matmul_mkl.cpp  matmul_omp.cpp  matmul_seq.cpp  matmul_starpu.cpp  strassen.h  strassen_gpu.cu  strassen_hrpf.cu  strassen_omp.cpp  strassen_seq.cpp  strassen_starpu.cu
test/transpose/: transpose_hrpf.cu  transpose_omp.cpp  transpose_seq.cpp
